--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <script src="html/js/toggle-element.js"></script>
     <script src="html/js/simple-tabs.js"></script>
+    <script src="html/js/tool.js"></script>
 
     <script src="html/js/vue.min.js"></script>
     <script src="html/js/index.js"></script>
@@ -100,7 +101,7 @@
                     <a href="/MakomoProject" aria-label="MakomoProject"
                        class="tooltipped tooltipped-n avatar-group-item">
                         <img alt="@MakomoProject" class="avatar" height="35"
-                             src="https://avatars3.githubusercontent.com/u/23189528?v=3&amp;s=70"
+                             src="https://avatars3.githubusercontent.com/u/23189528?v=3"
                              width="35"></a>
                 </div>
             </div>
