--- a/pages/the-programmer's-self-improvement/index.html
+++ b/pages/the-programmer's-self-improvement/index.html
@@ -10,8 +10,7 @@
     <link rel="fluid-icon" href="/html/img/fluidicon.jpg" title="MaiJZ">
     <link rel="icon" type="image/x-icon" href="/html/img/favicon.ico">
 
-    <link rel="stylesheet" href="/html/css/base.css">
-    <link rel="stylesheet" href="/html/css/github-frameworks.css">
+    <link rel="stylesheet" href="/html/css/maijz-frameworks.css">
 
     <link rel="stylesheet" href="index.css">
 
@@ -30,7 +29,7 @@
 
 <div role="main">
     <div class="container-lg clearfix px-3 mt-4">
-        <div class="h-card col-3 float-left pr-3"></div>
+        <div class="col-3 float-left pr-3"></div>
 
         <div class="col-9 float-left pl-2">
             程序员的自我修养
