整理文件结构

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 
     <link rel="stylesheet" href="html/css/maijz-frameworks.css">
 
-
+    <link rel="stylesheet" href="html/github-languages-color/colors.css">
     <link rel="stylesheet" href="html/css/pinned-repo-item.css">
-    <link rel="stylesheet" href="html/css/index.css">
+    <link rel="stylesheet" href="pages/profile/index.css">
 
+    <script src="html/github-languages-color/colors.js"></script>
     <script src="html/js/toggle-element.js"></script>
     <script src="html/js/simple-tabs.js"></script>
     <script src="html/js/tool.js"></script>
 
+
     <script src="html/js/vue.min.js"></script>
-    <script src="html/js/index.js"></script>
+    <script src="pages/profile/index.js"></script>
 </head>
 <body>
 
