--- a/pages/movie/index.html
+++ b/pages/movie/index.html
@@ -12,16 +12,15 @@
     <link rel="stylesheet" href="/html/css/maijz-frameworks.css">
     <link rel="stylesheet" href="index.css">
 
-    <script src="/html/js/toggle-element.js"></script>
     <script src="/html/js/tool.js"></script>
+    <script src="/html/js/toggle-element.js"></script>
     <script src="/html/js/vue.min.js"></script>
     <script src="index.js"></script>
 
 </head>
 <body>
 <div class="position-relative">
-    <iframe src="/pages/header/index.html" width="100%" height="55" marginwidth="0" frameborder="no"
-            scrolling="no"></iframe>
+    <div id="header-content"></div>
 </div>
 <div role="main">
     <div class="container-lg clearfix px-3 mt-4">
@@ -66,5 +65,9 @@
 
     </div>
 </div>
+
+<script>
+     htmlLoader("/pages/header/index.html", "#header-content");
+</script>
 </body>
 </html>
