--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="html/css/pinned-repo-item.css">
     <link rel="stylesheet" href="pages/profile/index.css">
 
+    <script src="html/js/tool.js"></script>
     <script src="html/github-languages-color/colors.js"></script>
     <script src="html/js/toggle-element.js"></script>
     <script src="html/js/simple-tabs.js"></script>
-    <script src="html/js/tool.js"></script>
 
 
     <script src="html/js/vue.min.js"></script>
@@ -27,7 +27,7 @@
 <body>
 
 <div class="position-relative ">
-    <iframe src="/pages/header/index.html" width="100%" height="55" marginwidth="0" frameborder="no" scrolling="no"></iframe>
+    <div id="header-content"></div>
 </div>
 <div role="main">
     <div id="pane-profile" class="container-lg clearfix px-3 mt-4">
@@ -245,6 +245,10 @@
 
 </div>
 
+
+<script>
+    htmlLoader("/pages/header/index.html", "#header-content");
+</script>
 
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
 
