--- a/pages/books/index.html
+++ b/pages/books/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="pinned-book-item.css">
     <link rel="stylesheet" href="index.css">
 
-
+    <script src="/html/js/tool.js"></script>
     <script src="/html/js/vue.min.js"></script>
     <script src="/html/js/toggle-element.js"></script>
     <script src="/html/js/simple-tabs.js"></script>
@@ -24,7 +24,7 @@
 </head>
 <body>
 <div class="position-relative ">
-    <iframe src="/pages/header/index.html" width="100%" height="55" marginwidth="0" frameborder="no" scrolling="no"></iframe>
+    <div id="header-content"></div>
 </div>
 <div role="main">
     <div class="container-lg clearfix px-3 mt-4">
@@ -85,6 +85,10 @@
         </div>
     </div>
 </div>
+
+<script>
+    htmlLoader("/pages/header/index.html", "#header-content");
+</script>
 
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
 
