--- a/pages/movie/index.html
+++ b/pages/movie/index.html
@@ -59,6 +59,10 @@
                                        v-if="movie.links.thunder" v-bind:href="movie.links.thunder">迅雷</a>
                                     <a class="movie-link" title="QQ旋风下载" target="_blank"
                                        v-if="movie.links.qqdl" v-bind:href="movie.links.qqdl">旋风</a>
+                                    <a class="movie-link" title="ftp" target="_blank"
+                                        v-if="movie.links.ftp" v-bind:href="movie.links.qqdl">FTP</a>
+                                    <a class="movie-link" title="http" target="_blank"
+                                    v-if="movie.links.http" v-bind:href="movie.links.qqdl">HTTP</a>
                                 </span>
                             </p>
                         </li>
