--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
 
     <script src="html/js/vue.min.js"></script>
-    <script src="page/profile/index.js"></script>
 </head>
 <body>
 
@@ -442,6 +441,42 @@
         Powered by <a href="https://github.com/maijz128/shpnode">SHPNode</a>
     </div>
 </footer>
+
+<script>/**
+ * Author: MaiJZ
+ * Date: 2017/11/17
+ * GitHub: https://github.com/maijz128
+ */
+
+const Data_Profile = {
+    "userName": "maijz128",
+    "projects": [
+        {
+            "title": "笔记",
+            "repos": [
+                "Rust"
+            ]
+        },
+        {
+            "title": "项目",
+            "repos": [
+                "voxel-model",
+                "AutoUnlock",
+                "bilibili-index-icon",
+                "Checker-for-Jandan",
+                "github-update-checker"
+            ]
+        },
+        {
+            "title": "练手项目",
+            "closing" : true,
+            "repos": [
+            ]
+        }
+    ]
+};
+</script>
+<script src="page/profile/index.js"></script>
 
 <div style="display: none;">
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
